change sbt script for java8 from java7